2007-08-23  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by .

        - window-resize.html now passes.

        * platform/win/Skipped:

2007-08-23  David Kilzer  <ddkilzer@webkit.org>

        Reviewed by Adam.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11756
          REGRESSION: link targeting a frame in another window does not work
          <rdar://problem/5286420>

        * http/tests/navigation/resources/target-frame-from-window-end.html: Added.
        * http/tests/navigation/resources/target-frame-from-window-popup.html: Added.
        * http/tests/navigation/resources/target-frame-from-window-start.html: Added.
        * http/tests/navigation/target-frame-from-window-expected.txt: Added.
        * http/tests/navigation/target-frame-from-window.html: Added.
        * platform/win/Skipped: Added http/tests/navigation/target-frame-from-window.html to skip list.

2007-08-23  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Adele.
        
        <rdar://problem/5156801> REGRESSION: Crash at DeleteSelectionCommand::doApply() when deleting table content

        * editing/deleting/5156801-2.html: Added.
        * platform/mac/editing/deleting: Added.
        * platform/mac/editing/deleting/5156801-2-expected.checksum: Added.
        * platform/mac/editing/deleting/5156801-2-expected.png: Added.
        * platform/mac/editing/deleting/5156801-2-expected.txt: Added.

2007-08-22  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Adam.

        <rdar://problem/5418891> CrashTracer: [USER] 1 crash in Mail at -[WebViewEditor webView:shouldInsertText:replacingDOMRange:givenAction:]

        * editing/inserting/5418891.html: Added.
        * platform/mac/editing/inserting: Added.
        * platform/mac/editing/inserting/5418891-expected.checksum: Added.
        * platform/mac/editing/inserting/5418891-expected.png: Added.
        * platform/mac/editing/inserting/5418891-expected.txt: Added.
