@@ -1,3 +1,14 @@
+2007-08-24  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Hyatt and Adele.
+
+        Fix for <rdar://problem/5417203> Google Gmail 1.0 widget - unread 
+        count is missing
+
+        * rendering/FixedTableLayout.cpp:
+        (WebCore::FixedTableLayout::calcWidthArray): Calc pref widths for 
+        our cells, if needed.
+
 2007-08-24  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Darin.
